--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,10 +34,18 @@
         <activity android:name=".PostLogin" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".CreateGroup"
             android:label="@string/title_activity_create_group"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ViewGroup"
+            android:label="@string/title_activity_view_group"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".JoinGroup"
+            android:label="@string/title_activity_join_group"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
