--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".PostLogin" />
+
         <activity
             android:name=".LoginActivity"
-            android:exported="true" />
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+
         <activity
             android:name=".CreateGroup"
             android:label="@string/title_activity_create_group"
@@ -46,7 +54,7 @@
         <activity
             android:name=".JoinGroup"
             android:label="@string/title_activity_join_group"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
