--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,8 @@
         <activity
             android:name=".ShowGroupInfo"
             android:label="@string/title_activity_show_group_info"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ReportUser"></activity>
     </application>
 
 </manifest>
