--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,9 @@
             android:name=".ShowGroupInfo"
             android:label="@string/title_activity_show_group_info"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ReportUser"></activity>
+        <activity android:name=".ReportUser" />
+        <activity android:name=".DeleteGroup" />
+        <activity android:name=".SearchCategories"></activity>
     </application>
 
 </manifest>
